--- a/public/admin.html
+++ b/public/admin.html
@@ -9,6 +9,8 @@
   <script src="admin-script.js"></script>
 </head>
 <body>
+  <div id="passwordInput"></div>
+  <div id="passwordSubmit"></div>
   <div id="adminPanel">
     <div class="labels">Conversations:</div>
     <div id="conversations"></div>
