--- a/public/admin.html
+++ b/public/admin.html
@@ -9,7 +9,7 @@
   <script src="admin-script.js"></script>
 </head>
 <body>
-  <div id="passwordInput" type="input"></div>
+  <input id="passwordInput" type="password" placeholder="Enter password">
   <div id="passwordSubmit">submit</div>
   <div id="adminPanel">
     <div class="labels">Conversations:</div>
